# evals

./: .gitignore  pyproject.toml  todo.txt
pipeline-debugger/: .gitignore  README.md  env_config.yaml  eval_report.md  pipeline_debugger.py  pyproject.toml  run_eval.py
pipeline-debugger/environments/: __init__.py  pipeline_debugger.py
pipeline-debugger/generator/: __init__.py  generate.py  mutations.py
pipeline-debugger/generator/template_pipeline/pipeline/: __init__.py  transform.py
pipeline-debugger/instances/instance_001/: expected_schema.json  metadata.json
pipeline-debugger/instances/instance_002/: metadata.json  run_pipeline.py
pipeline-debugger/instances/instance_003/: metadata.json
pipeline-debugger/instances/instance_004/: metadata.json
pipeline-debugger/instances/instance_005/: metadata.json
pipeline-debugger/instances/instance_006/: metadata.json  run_pipeline.py
pipeline-debugger/instances/instance_007/: metadata.json
pipeline-debugger/instances/instance_008/: metadata.json
pipeline-debugger/instances/instance_009/: metadata.json  tests_hashes.json
pipeline-debugger/instances/instance_010/: metadata.json
pipeline-debugger/instances/instance_011/: metadata.json
pipeline-debugger/instances/instance_012/: metadata.json
pipeline-debugger/instances/instance_013/: metadata.json
pipeline-debugger/instances/instance_014/: README.md  metadata.json
pipeline-debugger/instances/instance_015/: metadata.json
pipeline-debugger/tests/: test_environment.py  test_verifier.py
pipeline-debugger/verifier/: __init__.py  verify.py
(+48 files in other folders)
